Add theme composition + url including slug

--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,13 @@
 baseURL = "https://cpbotha.net/"
 languageCode = "en-us"
 title = "voices in my head"
-theme = "hugo-theme-minos"
+theme = ["hugo-theme-minos-cpbotha", "hugo-theme-minos"]
 
 # we only need this for minos to get disqus going.
 disqusShortname = "cpbotha"
 
+[author]
+  name = "cpbotha"
+
 [permalinks]
-  posts = "/:year/:month/:day/:title/"
+  posts = "/:year/:month/:day/:slug/"
